--- a/index.html
+++ b/index.html
@@ -1,120 +1,79 @@
+
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- stylesheets -->
-    <link rel="stylesheet" href="./Styles/styles.css" />
-    <link rel="stylesheet" href="./Styles/categories.css" />
-
-    <!-- fonts -->
+    <title>Clothes</title>
+    <link rel="stylesheet" href="../Styles/product-styles.css" />
+    <link rel="stylesheet" href="../styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet" />
 
-    <!-- library -->
-    <script
-      type="module"
-      src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
-    ></script>
-
-    <link rel="icon" href="/images/AR_Zenith_Icon.png" type="image/png">
-
-    <title>AR Zenith</title>
-  </head>
-
-  <body>
-    <h1 class="hero-header orbitron-header">AR Zenith</h1>
-    <section class="ar-info-content">
-      <h2 class="orbitron-sub-header">Augmented Reality: Blending Worlds</h2>
-      <div class="ar-info">
-        <div class="ar-info-text">
-          <h3 class="orbitron-small-header">Merging Pixels with Reality</h3>
-          <p class="montserrat-alternates-regular">
-            Augmented Reality (AR) is the digital wizardry that blurs the line
-            between the real and virtual. Instead of diving headfirst into an
-            alternate universe like Virtual Reality (VR), AR sprinkles digital
-            magic into our world, overlaying interactive 3D elements onto your
-            everyday surroundings. Whether through smartphones, glasses, or
-            fancy headsets, AR lets you play in a space where the real world
-            meets the digital frontier.
-          </p>
-          <h3 class="orbitron-small-header">
-            From Stark Tech to Pocket Monsters
-          </h3>
-          <p class="montserrat-alternates-regular">
-            AR wasn't always a reality; it began as the brainchild of sci-fi
-            visionaries. Remember Tony Stark's holographic, flick-of-the-wrist
-            interfaces in Iron Man? That heads-up display was the blueprint for
-            what we now know as AR. Minority Report took it up a notch,
-            imagining a future where entire cities run on augmented reality,
-            with people waving through holograms and controlling digital
-            interfaces midair. Fast forward to today, and those wild fantasies
-            have materialized in the form of Google Glass (RIP), and the AR
-            sensation Pokémon Go, where we all turned into virtual Pokémon
-            trainers.
-          </p>
-          <h3 class="orbitron-small-header">Not Just for Gamers</h3>
-          <p class="montserrat-alternates-regular">
-            AR has officially stepped out of the movies and into our homes,
-            classrooms, and beyond. In gaming, AR lets us bring monsters into
-            our living rooms. But it's not all fun and games—AR is also
-            transforming industries like architecture and retail. Ever tried to
-            virtually place a couch in your living room? Apps like IKEA Place
-            let you drag-and-drop 3D furniture into your space, giving you a
-            sneak peek at how it'll look IRL. AR is everywhere—from boosting
-            marketing campaigns with interactive ads to reimagining the
-            classroom by layering educational content over the real world. It's
-            more than just a gimmick; it's the future.
-          </p>
-        </div>
-        <div class="ar-info-model">
-          <model-viewer
-            ar
-            id="robot-model"
-            camera-controls
-            src="../Models/robot.glb"
-            alt="A robot"
-            autoplay
-            shadow-intensity="1"
-            min-camera-orbit="auto auto 2m"
-            max-camera-orbit="45deg 90deg 10m"
-          ></model-viewer>
+    <link rel="icon" href="images/AR_Zenith_Icon.png" type="image/png">
+</head>
+<body>
+    <div class="button-container">
+        <a href="../index.html" class="back-button">&#8592; Back</a>
+        <div class="right-buttons">
+          <a href="clothes.html" class="nav-button">Clothes</a>
+          <a href="education.html" class="nav-button">Education</a>
+          <a href="shoes.html" class="nav-button">Shoes</a>
         </div>
       </div>
-    </section>
-
-    <section class="explore">
-      <h3 class="orbitron-sub-header">Discover</h3>
-      <div class="card-container">
-        <a href="Pages\clothes.html" class="parallelogram-card">
-          <div class="parallelogram-content">
-            <!-- <img src="../images/clothing.webp" alt="Clothing" /> -->
-            <h2>Clothing</h2>
-          </div>
+      
+    <div class="product-container">
+        <a href="Pages/products/caro-flannel-shirt.html" class="product-box">
+            <img src="images/clothes/caro-flannel-shirt-removebg-preview.png" alt="Caro Flannel Shirt" class="product-image" />
+            <h2 class="product-name">Caro Flannel Shirt</h2>
+            <p class="product-price">$25.99</p>
+            <p class="product-description">A timeless classic cotton shirt, perfect for any occasion.</p>
         </a>
-        <a href="Pages/shoes.html" class="parallelogram-card">
-          <div class="parallelogram-content">
-            <!-- <img src="../images/shoe-set.webp" alt="Shoes" /> -->
-            <h2>Shoes</h2>
-          </div>
+        <a href="Pages/products/denim-jacket.html" class="product-box">
+            <img src="images/clothes/denim-jacket-removebg-preview.png" alt="Denim Jacket" class="product-image" />
+            <h2 class="product-name">Denim Jacket</h2>
+            <p class="product-price">$49.99</p>
+            <p class="product-description">Stylish denim jacket, durable and fashionable.</p>
         </a>
-        <a href="Pages/education.html" class="parallelogram-card">
-          <div class="parallelogram-content">
-            <!-- <img src="../images/education.webp" alt="Education" /> -->
-            <h2>Education</h2>
-          </div>
+        <a href="Pages/products/medeival-gown.html" class="product-box">
+            <img src="images/clothes/gown-removebg-preview.png" alt="Medieval Gown" class="product-image" />
+            <h2 class="product-name">Gown</h2>
+            <p class="product-price">$339.99</p>
+            <p class="product-description">Elegant evening dress with a modern cut.</p>
         </a>
-      </div>
-    </section>
+        <a href="Pages/products/gold-dress.html" class="product-box">
+            <img src="images/clothes/gold-dress-removebg-preview.png" alt="Gold Dress" class="product-image" />
+            <h2 class="product-name">Female Dress</h2>
+            <p class="product-price">$79.99</p>
+            <p class="product-description">Comfortable and stylish for any occasion.</p>
+        </a>
+        <a href="Pages/products/sweatshirt.html" class="product-box">
+            <img src="../images/clothes/sweatshirt.png" alt="Sweat Shirt" class="product-image" />
+            <h2 class="product-name">Sweat Shirt</h2>
+            <p class="product-price">$89.99</p>
+            <p class="product-description">A cozy choice for chilly days.</p>
+        </a>
+        <a href="Pages/products/pleated-skirt.html" class="product-box">
+            <img src="images/clothes/pleated-skirt-removebg-preview.png" alt="Pleated Skirt" class="product-image" />
+            <h2 class="product-name">Pleated Skirt</h2>
+            <p class="product-price">$15.99</p>
+            <p class="product-description">A versatile addition to your wardrobe.</p>
+        </a>
+        <a href="Pages/products/tailcoat-suit.html" class="product-box">
+            <img src="images/clothes/tailcoat-suit-removebg-preview.png" alt="Tailcoat Suit" class="product-image" />
+            <h2 class="product-name">Tailcoat Suit</h2>
+            <p class="product-price">$45.99</p>
+            <p class="product-description">Classic design for formal occasions.</p>
+        </a>
+        <a href="Pages/products/agbada.html" class="product-box">
+            <img src="images/clothes/agbada-removebg-preview.png" alt="Agbada" class="product-image" />
+            <h2 class="product-name">Agbada</h2>
+            <p class="product-price">$59.99</p>
+            <p class="product-description">Traditional wear for special events.</p>
+        </a>
+    </div>
 
     <section class="footer">
       <p>
@@ -123,5 +82,5 @@
         >. All rights reserved.
       </p>
     </section>
-  </body>
+</body>
 </html>
