--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <main class="p-4 grid grid-cols-2 gap-4">
 
     <!-- PRODUCT CARD -->
-    <a href="#" class="bg-white rounded-xl shadow-sm p-3">
+    <a href="Pages/products/caro-flannel-shirt.html" class="bg-white rounded-xl shadow-sm p-3">
         <img src="images/clothes/caro-flannel-shirt-removebg-preview.png"
              class="h-32 w-full object-contain mb-2">
         <h2 class="text-sm font-semibold">Caro Flannel</h2>
