--- a/Pages/products/caro-flannel-shirt.html
+++ b/Pages/products/caro-flannel-shirt.html
@@ -1,45 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
     <title>Caro Flannel Shirt</title>
-    <link rel="stylesheet" href="../../Styles/styles.css" />
-    <link rel="stylesheet" href="../../Styles/view-product.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" href="../../images/AR_Zenith_Icon.png" type="image/png">
+    <!-- Tailwind -->
+    <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap" rel="stylesheet" />
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
 
-    <!-- model-viewer library -->
+    <!-- model-viewer -->
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
+
+    <style>
+        body { font-family: 'Montserrat', sans-serif; }
+        model-viewer { width: 100%; height: 100%; }
+    </style>
 </head>
-<body>
-    <a href="../clothes.html" class="back-button">&#8592; Back</a>
-    <div class="product-card">
-        <div class="ar-viewer">
-            <model-viewer
-                src="../../Models/Products/clothes/mens_caro_flannel_shirt.glb"
-                alt="Caro Flannel Shirt"
-                ar
-                ar-modes="webxr scene-viewer quick-look"
-                camera-controls
-                auto-rotate
-                shadow-intensity="1">
-            </model-viewer>
-        </div>
-        <div class="product-info">
-            <h1 class="product-name">Caro Flannel Shirt</h1>
-            <p class="product-price">$25.99</p>
-            <p class="product-description">
-                A timeless classic cotton shirt, perfect for any occasion. The Caro
-                Flannel Shirt offers style and comfort in every season.
-            </p>
-        </div>
+
+<body class="bg-gray-100 pb-28">
+
+<!-- ✅ HEADER -->
+<header class="bg-white sticky top-0 z-50 shadow-sm">
+    <div class="flex items-center p-4 gap-3">
+        <a href="../clothes.html" class="text-xl">←</a>
+        <h1 class="font-semibold text-lg">Product details</h1>
     </div>
+</header>
+
+<!-- ✅ AR / PRODUCT IMAGE -->
+<section class="bg-white h-80 flex items-center justify-center">
+    <model-viewer
+        src="../../Models/Products/clothes/mens_caro_flannel_shirt.glb"
+        alt="Caro Flannel Shirt"
+        ar
+        ar-modes="webxr scene-viewer quick-look"
+        camera-controls
+        auto-rotate
+        shadow-intensity="1">
+    </model-viewer>
+</section>
+
+<!-- ✅ PRODUCT INFO -->
+<section class="p-4 space-y-3 bg-gray-100">
+    
+    <h2 class="text-xl font-semibold">Caro Flannel Shirt</h2>
+
+    <div class="flex items-center justify-between">
+        <p class="text-2xl font-bold text-red-500">$25.99</p>
+        <span class="text-xs bg-green-100 text-green-600 px-2 py-1 rounded-full">
+            In stock
+        </span>
+    </div>
+
+    <p class="text-gray-600 text-sm">
+        A timeless classic cotton shirt, perfect for any occasion.
+        The Caro Flannel Shirt offers style and comfort in every season.
+    </p>
+
+    <!-- ✅ ACTION BUTTONS -->
+    <div class="flex gap-3 mt-4">
+        <button class="flex-1 border border-gray-400 rounded-xl py-3 text-sm">
+            ❤️ Wishlist
+        </button>
+        <button class="flex-1 bg-red-500 text-white rounded-xl py-3 text-sm font-semibold">
+            Add to cart
+        </button>
+    </div>
+
+</section>
+
+<!-- ✅ FOOTER CART CTA -->
+<footer class="fixed bottom-16 left-0 right-0 px-4">
+    <button class="w-full bg-black text-white py-4 rounded-2xl font-semibold">
+        Buy now
+    </button>
+</footer>
+
+<!-- ✅ APP BOTTOM NAV -->
+<nav class="fixed bottom-0 left-0 right-0 bg-white border-t shadow-md">
+    <div class="flex justify-around py-3 text-xs text-gray-500">
+
+        <a href="../index.html" class="flex flex-col items-center">
+            🏠
+            <span>Home</span>
+        </a>
+
+        <a href="#" class="flex flex-col items-center">
+            🗂️
+            <span>Categories</span>
+        </a>
+
+        <a href="#" class="flex flex-col items-center text-red-500">
+            🛍️
+            <span>Product</span>
+        </a>
+
+        <a href="#" class="flex flex-col items-center">
+            🛒
+            <span>Cart</span>
+        </a>
+
+        <a href="#" class="flex flex-col items-center">
+            👤
+            <span>Profile</span>
+        </a>
+
+    </div>
+</nav>
+
 </body>
 </html>
