--- a/index.html
+++ b/index.html
@@ -42,28 +42,28 @@
         <img src="images/clothes/caro-flannel-shirt-removebg-preview.png"
              class="h-32 w-full object-contain mb-2">
         <h2 class="text-sm font-semibold">Caro Flannel</h2>
-        <p class="text-red-500 font-bold">$25.99</p>
+        <p class="text-red-500 font-bold">25.99 MT</p>
     </a>
 
     <a href="#" class="bg-white rounded-xl shadow-sm p-3">
         <img src="images/clothes/denim-jacket-removebg-preview.png"
              class="h-32 w-full object-contain mb-2">
         <h2 class="text-sm font-semibold">Denim Jacket</h2>
-        <p class="text-red-500 font-bold">$49.99</p>
+        <p class="text-red-500 font-bold">49.99 MT</p>
     </a>
 
     <a href="#" class="bg-white rounded-xl shadow-sm p-3">
         <img src="images/clothes/gown-removebg-preview.png"
              class="h-32 w-full object-contain mb-2">
         <h2 class="text-sm font-semibold">Gown</h2>
-        <p class="text-red-500 font-bold">$339.99</p>
+        <p class="text-red-500 font-bold">339.99 MT</p>
     </a>
 
     <a href="#" class="bg-white rounded-xl shadow-sm p-3">
         <img src="images/clothes/gold-dress-removebg-preview.png"
              class="h-32 w-full object-contain mb-2">
         <h2 class="text-sm font-semibold">Female Dress</h2>
-        <p class="text-red-500 font-bold">$79.99</p>
+        <p class="text-red-500 font-bold">79.99 MT</p>
     </a>
 
 </main>
@@ -75,11 +75,6 @@
         <a href="../index.html" class="flex flex-col items-center text-red-500">
             🏠
             <span>Home</span>
-        </a>
-
-        <a href="#" class="flex flex-col items-center">
-            🗂️
-            <span>Categories</span>
         </a>
 
         <a href="#" class="flex flex-col items-center">
