--- a/Pages/products/caro-flannel-shirt.html
+++ b/Pages/products/caro-flannel-shirt.html
@@ -49,7 +49,7 @@
     <h2 class="text-xl font-semibold">Caro Flannel Shirt</h2>
 
     <div class="flex items-center justify-between">
-        <p class="text-2xl font-bold text-red-500">$25.99</p>
+        <p class="text-2xl font-bold text-red-500">25.99 MT</p>
         <span class="text-xs bg-green-100 text-green-600 px-2 py-1 rounded-full">
             In stock
         </span>
