--- a/Pages/products/caro-flannel-shirt.html
+++ b/Pages/products/caro-flannel-shirt.html
@@ -101,31 +101,23 @@
     </div>
 </nav>
 <script>
-    const button = document.getElementById("default-ar-button");
-    const content = document.getElementById("ar-content");
-    const original = content.innerHTML;
+document.addEventListener("DOMContentLoaded", () => {
+  const arButton = document.getElementById("default-ar-button");
 
-    function typeText(text, speed = 90) {
-        content.innerHTML = '<span class="typing"></span>';
-        const el = content.querySelector(".typing");
-        let i = 0;
+  if (arButton) {
+    const svg = arButton.querySelector("svg");
+    if (svg) svg.remove();
 
-        const interval = setInterval(() => {
-            el.textContent += text[i];
-            i++;
-            if (i === text.length) clearInterval(interval);
-        }, speed);
-    }
+    arButton.textContent = "testar";
 
-    button.addEventListener("click", () => {
-        typeText("Testar em AR");
-
-        // volta ao ícone após 2.8s
-        setTimeout(() => {
-            content.innerHTML = original;
-        }, 2800);
-    });
+    // opcional: estilizar
+    arButton.style.fontSize = "14px";
+    arButton.style.fontWeight = "600";
+    arButton.style.padding = "10px 14px";
+  }
+});
 </script>
+
 
 </body>
 </html>
