--- a/Pages/products/caro-flannel-shirt.html
+++ b/Pages/products/caro-flannel-shirt.html
@@ -103,20 +103,26 @@
 <script>
 document.addEventListener("DOMContentLoaded", () => {
   const arButton = document.getElementById("default-ar-button");
+  const svg = arButton?.querySelector("svg");
 
-  if (arButton) {
-    const svg = arButton.querySelector("svg");
-    if (svg) svg.remove();
+  if (!arButton || !svg) return;
 
-    arButton.textContent = "testar";
+  let isText = false;
 
-    // opcional: estilizar
-    arButton.style.fontSize = "14px";
-    arButton.style.fontWeight = "600";
-    arButton.style.padding = "10px 14px";
-  }
+  arButton.addEventListener("click", () => {
+    if (!isText) {
+      svg.style.display = "none";
+      arButton.textContent = "testar";
+    } else {
+      arButton.textContent = "";
+      arButton.appendChild(svg);
+      svg.style.display = "block";
+    }
+    isText = !isText;
+  });
 });
 </script>
+
 
 
 </body>
